blocks/user/__title/user__title.css
.user__title {
  font-family: 'Inter', 'Arial', sans-serif;
  font-size: 50px;
  font-weight: 700;
  text-transform: uppercase;
  padding: 0;
  margin: 0;
  color: #FFFFFF;
}

@media screen and (max-width: 767px) {
  .user__title {
    font-size: 32px;
  }
}

